--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,4 @@
-@import './assets/scss/mixin';
+// @import './assets/scss/mixin';
 
 
 
@@ -14,5 +14,6 @@
 //  @include mobile{
 //   background-color: red;
 //  }
+color: #000 !important;
 
 }
